# mmVP

./: CMakeLists.txt  README.md  changelog.txt
src/: mmvp.c  mmvp.h  mmvp_assert.h  mmvp_controller.h  mmvp_device.h  mmvp_error.h  mmvp_partition.c  mmvp_partition.h  mmvp_status.h  mmvp_utils.c  mmvp_utils.h
src/include/: mmvp.h  mmvp_assert.h  mmvp_device.h  mmvp_partition.h  mmvp_utils.h
tests/: common.c  common.h  test_api.c  test_expanding.c  test_init.c  test_register.c  test_start.c  test_unregister.c  test_utils.c
